--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.servlet.multipart.max-request-size=10000MB
 caching.ttl=600000
 
 # Contact Library Systems to get the .env file
+# spring.config.import=optional:file:../brocklibutil.env[.properties]
 libcal.clientId=${libcal_clientId}
 libcal.clientSecret=${libcal_clientSecret}
 libinsight.clientId=${libinsight_clientId}
