--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8085
 spring.servlet.multipart.max-file-size=250MB
 spring.servlet.multipart.max-request-size=10000MB
-caching.ttl=600000
+caching.ttl.wifi=600000
+caching.ttl.cal=300000
 
 # Contact Library Systems to get the .env file
 # spring.config.import=optional:file:../brocklibutil.env[.properties]
